# portfolio-projects

./: Dockerfile  Pipfile  Procfile  README.md  main.py  model.py  num_word.py  requirements.txt  scraper.py
.devcontainer/: devcontainer.json
__pycache__/static/css/: main.css
pipenv/: Pipfile  requirements.txt
portfolio/: pyproject.toml  requirements.txt
templates/: cover.html  home.html  indeed.html  indeed_ca.html  korean.html  loops.html  photo.html  projects.html  starter.html  template.html
