[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
authors = ["Jake Borromeo <47150322+jakeb1050@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "*"
selenium = "*"
requests = "*"
requests-html = "*"
gunicorn = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
